<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Main!</string>
    <string name="app_name">Phone 行天下</string>
    <string name="about">MapApiRouteDemo主要展示MapApi路径规划及PoiSearch功能，应用该功能需要先点击左上角放大镜按钮设置起点及终点。</string>
    <string name="ok">OK</string>
     <string name="starting_point">starting point:</string>
    <string name="destination">destination:</string>
    <string name="departure_time">departure time:</string>
        <string name="phone_number">phone:</string>
    <string name="details">details：</string>
    <string name="people_count">people in team:</string>
    <string name="call">call</string>
    <string name="message">IM</string>
    <string name="cannot_locate">can not locate your position</string>
</resources>
