<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="wrap_content" 
			android:layout_width="match_parent" 
			android:id="@+id/scrollView1"
			xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
 
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    
        <LinearLayout android:id="@+id/linearLayout6" android:layout_width="match_parent" android:layout_height="match_parent"></LinearLayout>
   
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout1">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/starting_point" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/editText1">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout2">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView2" android:text="@string/destination" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/editText2"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView3" android:text="@string/departure_time" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/spinner1" android:layout_weight="1"></Spinner>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView4" android:text="TextView" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/editText4" android:inputType="phone"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout5">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView5" android:text="TextView" android:textAppearance="?android:attr/textAppearanceMedium"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_weight="1" android:id="@+id/editText5" android:inputType="textMultiLine"></EditText>
    </LinearLayout>
    
</LinearLayout>
 </ScrollView>
